--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+
+# DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/security_db
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# create, create-drop , update
+spring.jpa.hibernate.ddl-auto = update
+
+
+jwt.secretKey =mysupersecuresecretkey1234567890abcd
